--- a/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco005/cumco005.component.css
+++ b/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco005/cumco005.component.css
@@ -1,6 +1,17 @@
 .ui-fieldset-legend {
     font-weight: bold;
   }
-  .red{
+
+.red{
 background-color:red;
+}
+
+
+.ui-table {
+  overflow-wrap: break-word
+}
+
+.table_button {
+  float:left;
+  margin-left: 2px;
 }
