--- a/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco009/cumco009.component.html
+++ b/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco009/cumco009.component.html
@@ -1,4 +1,4 @@
-<div class="ui-fluid"> 
+<div class="ui-fluid">
   <p-toast position="top-center"></p-toast>
   <p-fieldset legend="{{ 'CUMCO009.titulo' | translate }}">
     <p>
@@ -8,9 +8,10 @@
       <div class="ui-g-12">
         <div class="ui-inputgroup">
           <span class="ui-inputgroup-addon"><i class="pi pi-search" style="line-height: 1;"></i></span>
-          <p-autoComplete [(ngModel)]="filtroTipoPersona" field="idDescripcion" [suggestions]="tablaPersonasFiltro" (completeMethod)="searchPersona($event)"
-          [dropdown]="true" placeholder="{{ 'CUMCO009.FILTROS.filtrotituloPersonaPlaceHolder' | translate }}"
-          (onSelect)="selectTipoPersonaFilter($event)" (focusout)="focusOutFiltroPersona()"></p-autoComplete>
+          <p-autoComplete [(ngModel)]="filtroTipoPersona" field="idDescripcion" [suggestions]="tablaPersonasFiltro"
+            (completeMethod)="searchPersona($event)" [dropdown]="true"
+            placeholder="{{ 'CUMCO009.FILTROS.filtrotituloPersonaPlaceHolder' | translate }}"
+            (onSelect)="selectTipoPersonaFilter($event)" (focusout)="focusOutFiltroPersona()"></p-autoComplete>
           <p-button icon="pi pi-times" (click)="onClicBorrarAutoCompletePersona()"></p-button>
         </div>
       </div>
@@ -20,9 +21,11 @@
       <div class="ui-g-12">
         <div class="ui-inputgroup">
           <span class="ui-inputgroup-addon"><i class="pi pi-search" style="line-height: 1;"></i></span>
-          <p-autoComplete [(ngModel)]="filtroTipoIdentificacion" field="idDescripcion" [suggestions]="tablaIdentificacionFiltro" (completeMethod)="searchTipoIdentificacion($event)"
-          (onSelect)="selectIdetnfificacionFilter($event)" (focusout)="focusOutFiltroTipoIdentificacion()"
-          [dropdown]="true" placeholder="{{ 'CUMCO009.FILTROS.filtrotituloIdentificacionPlaceHolder' | translate }}" ></p-autoComplete>
+          <p-autoComplete [(ngModel)]="filtroTipoIdentificacion" field="idDescripcion"
+            [suggestions]="tablaIdentificacionFiltro" (completeMethod)="searchTipoIdentificacion($event)"
+            (onSelect)="selectIdetnfificacionFilter($event)" (focusout)="focusOutFiltroTipoIdentificacion()"
+            [dropdown]="true" placeholder="{{ 'CUMCO009.FILTROS.filtrotituloIdentificacionPlaceHolder' | translate }}">
+          </p-autoComplete>
           <p-button icon="pi pi-times" (click)="onClicBorrarAutoCompleteIdentificacion()"></p-button>
         </div>
       </div>
@@ -31,16 +34,17 @@
   </p-fieldset>
 
   <p-fieldset legend="{{ 'CUMCO009.FILTROS.tablaPersona' | translate }}">
-    
+
     <p-messages [(value)]="msgs"></p-messages>
 
-    <p-table [columns]="columnasAdjuntos" [value]="tablaPersonas" [paginator]="true" [(rows)]="nRowsTable1" [rowsPerPageOptions]="nRowsOptionsTable1"
-      [(selection)]="seleccionPersona" selectionMode="single" (onRowSelect)="rowSelect()" (onRowUnselect)="rowSelect()">
+    <p-table [columns]="columnasAdjuntos" [value]="tablaPersonas" [paginator]="true" [(rows)]="nRowsTable1"
+      [rowsPerPageOptions]="nRowsOptionsTable1" [(selection)]="seleccionPersona" selectionMode="single"
+      (onRowSelect)="rowSelect()" (onRowUnselect)="rowSelect()">
 
       <!-- Table Column Width -->
       <ng-template pTemplate="colgroup" let-columns>
         <colgroup>
-          <col style="width:5%"> 
+          <col style="width:5%">
         </colgroup>
       </ng-template>
 
@@ -48,24 +52,39 @@
       <ng-template pTemplate="caption">
         <div class="ui-helper-clearfix menu-sup-grid">
           <div class="button-sup-grid">
-            <p-button icon="pi pi-save" label="{{ 'BOTONESTABLA.guardar' | translate }}" iconPos="left" style="float:left; margin-left: 2px;" (click)="onGuardarColumna()"></p-button>
+            <p-button icon="pi pi-save" label="{{ 'BOTONESTABLA.guardar' | translate }}" iconPos="left"
+              class="table_button" (click)="onGuardarColumna()"></p-button>
           </div>
         </div>
       </ng-template>
 
-       <!-- Table Heardes -->
-       <ng-template pTemplate="header" let-columns>
+      <!-- Table Heardes -->
+      <ng-template pTemplate="header" let-columns>
         <tr>
           <th *ngFor="let col of columns" [pSortableColumn]="col.field">
-            {{col.header}}
-            <p-sortIcon [field]="col.field" ariaLabel="Activate to sort" ariaLabelDesc="Activate to sort in descending order" ariaLabelAsc="Activate to sort in ascending order"></p-sortIcon>
+
+            <div *ngIf="col.required; else loggedOut">
+              <B>
+                <FONT COLOR="red">*</FONT>
+              </B>
+              {{col.header}}
+            </div>
+
+            <ng-template #loggedOut>
+              {{col.header}}
+            </ng-template>
+
+            <p-sortIcon [field]="col.field" ariaLabel="Activate to sort"
+              ariaLabelDesc="Activate to sort in descending order" ariaLabelAsc="Activate to sort in ascending order">
+            </p-sortIcon>
           </th>
         </tr>
       </ng-template>
 
       <ng-template pTemplate="body" let-row let-rowData let-columns="columns" let-rowIndex="rowIndex">
         <tr [pSelectableRow]="rowData" [pSelectableRowIndex]="rowIndex"
-        *ngIf="(filtroTipoPersona === undefined || filtroTipoPersona.id === row.id)" [ngStyle]="gteRowColorState(row)">
+          *ngIf="(filtroTipoPersona === undefined || filtroTipoPersona.id === row.id)"
+          [ngStyle]="gteRowColorState(row)">
           <td pEditableColumn *ngFor="let col of columns; let i = index" [attr.data-index]="i">
 
             <div [ngSwitch]="i">
@@ -91,14 +110,15 @@
                 </p-cellEditor>
               </div>
               <div *ngSwitchCase="3">
-                  <p-cellEditor>
-                    <ng-template pTemplate="input">
-                      <input type="text" [(ngModel)]="row.descripcion" [maxlength]="200" (focusout)="editedPerson(rowIndex)" (keydown.enter)="editedPerson(rowIndex)">
-                    </ng-template>
-                    <ng-template pTemplate="output">
-                      {{row.descripcion}}
-                    </ng-template>
-                  </p-cellEditor>
+                <p-cellEditor>
+                  <ng-template pTemplate="input">
+                    <input type="text" [(ngModel)]="row.descripcion" [maxlength]="200"
+                      (focusout)="editedPerson(rowIndex)" (keydown.enter)="editedPerson(rowIndex)">
+                  </ng-template>
+                  <ng-template pTemplate="output">
+                    {{row.descripcion}}
+                  </ng-template>
+                </p-cellEditor>
               </div>
 
             </div>
@@ -119,42 +139,61 @@
 
     <p-messages [(value)]="msgs2"></p-messages>
 
-    <p-table [columns]="columnasAdjuntosComunicacion" [value]="rows" [(selection)]="seleccionConfiguracion" 
-    [paginator]="true" [rowsPerPageOptions]="nRowsOptionsTable2" [(rows)]="nRowsTable2" [(first)]="pageTable2" selectionMode="single">
+    <p-table [columns]="columnasAdjuntosComunicacion" [value]="rows" [(selection)]="seleccionConfiguracion"
+      [paginator]="true" [rowsPerPageOptions]="nRowsOptionsTable2" [(rows)]="nRowsTable2" [(first)]="pageTable2"
+      selectionMode="single">
 
       <!-- Table Column Width -->
       <ng-template pTemplate="colgroup" let-columns>
         <colgroup>
-          <col style="width:5%"> 
+          <col style="width:5%">
         </colgroup>
       </ng-template>
 
       <ng-template pTemplate="caption">
         <div class="ui-helper-clearfix menu-sup-grid">
           <div class="button-sup-grid">
-            <p-button label="{{ 'BOTONESTABLA.agregar' | translate }}" icon="pi pi-plus" iconPos="left" style="float:left; margin-left: 2px;" (click)="agregarClick()" [disabled]="seleccionPersona === undefined"></p-button>
-            <p-button label="{{ 'BOTONESTABLA.eliminar' | translate }}" icon="pi pi-minus" iconPos="left" style="float:left; margin-left: 2px;" (click)="eliminarClick()" [disabled]="seleccionPersona === undefined"></p-button>
-            <p-button icon="pi pi-save" label="{{ 'BOTONESTABLA.guardar' | translate }}" iconPos="left" style="float:left; margin-left: 2px;" (click)="onGuardarConfiguracion()" [disabled]="seleccionPersona === undefined"></p-button>
+            <p-button label="{{ 'BOTONESTABLA.agregar' | translate }}" icon="pi pi-plus" iconPos="left"
+              class="table_button" (click)="agregarClick()"
+              [disabled]="seleccionPersona === undefined"></p-button>
+            <p-button label="{{ 'BOTONESTABLA.eliminar' | translate }}" icon="pi pi-minus" iconPos="left"
+              class="table_button" (click)="eliminarClick()"
+              [disabled]="seleccionPersona === undefined"></p-button>
+            <p-button icon="pi pi-save" label="{{ 'BOTONESTABLA.guardar' | translate }}" iconPos="left"
+              class="table_button" (click)="onGuardarConfiguracion()"
+              [disabled]="seleccionPersona === undefined"></p-button>
           </div>
         </div>
       </ng-template>
 
 
-       <!-- Table Heardes -->
-       <ng-template pTemplate="header" let-columns>
+      <!-- Table Heardes -->
+      <ng-template pTemplate="header" let-columns>
         <tr>
           <th *ngFor="let col of columns" [pSortableColumn]="col.field">
-            {{col.header}}
-            <p-sortIcon [field]="col.field" ariaLabel="Activate to sort" ariaLabelDesc="Activate to sort in descending order" ariaLabelAsc="Activate to sort in ascending order"></p-sortIcon>
+            
+            <div *ngIf="col.required; else loggedOut">
+              <B>
+                <FONT COLOR="red">*</FONT>
+              </B>
+              {{col.header}}
+            </div>
+
+            <ng-template #loggedOut>
+              {{col.header}}
+            </ng-template>
+
+            <p-sortIcon [field]="col.field" ariaLabel="Activate to sort"
+              ariaLabelDesc="Activate to sort in descending order" ariaLabelAsc="Activate to sort in ascending order">
+            </p-sortIcon>
           </th>
         </tr>
       </ng-template>
 
 
-      
+
       <ng-template pTemplate="body" let-row let-rowData let-columns="columns" let-rowIndex="rowIndex">
-        <tr [pSelectableRow]="row" [pSelectableRowIndex]="rowIndex"
-        [ngStyle]="gteRowColorState(row)">
+        <tr [pSelectableRow]="row" [pSelectableRowIndex]="rowIndex" [ngStyle]="gteRowColorState(row)">
           <td pEditableColumn *ngFor="let col of columns; let i = index" [attr.data-index]="i">
 
             <div [ngSwitch]="i">
@@ -185,8 +224,9 @@
               <div *ngSwitchCase="3">
                 <p-cellEditor>
                   <ng-template pTemplate="input">
-                    <input type="text" [(ngModel)]="row.descripcion" [maxlength]="50" [disabled]="row.state === 'delete' "
-                     (focusout)="editedIdentification(rowIndex, $event)" (keydown.enter)="editedIdentification(rowIndex, $event)" [disabled]="row.editable === 0">
+                    <input type="text" [(ngModel)]="row.descripcion" [maxlength]="50"
+                      [disabled]="row.state === 'delete' " (focusout)="editedIdentification(rowIndex, $event)"
+                      (keydown.enter)="editedIdentification(rowIndex, $event)" [disabled]="row.editable === 0">
                   </ng-template>
                   <ng-template pTemplate="output">
                     {{row.descripcion}}
