--- a/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco012/cumco012.component.css
+++ b/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco012/cumco012.component.css
@@ -2,9 +2,19 @@
     font-weight: bold;
   }
 
-  .boldParragraph {
+.boldParragraph {
     font-weight: bold;
   }
-p-cellEditor {
+
+.p-cellEditor {
   word-break: break-all;
+}
+
+.ui-table {
+  overflow-wrap: break-word
+}
+
+.table_button {
+  float:left;
+  margin-left: 2px;
 }
