--- a/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco016/cumco016.component.css
+++ b/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco016/cumco016.component.css
@@ -2,7 +2,7 @@
     font-weight: bold;
   }
 
-  p-cellEditor {
+.p-cellEditor {
     word-break: break-all;
   }
 
@@ -10,3 +10,13 @@
   .ui-picklist-source-controls {
     display: none !important;
   }
+
+  .ui-table {
+    overflow-wrap: break-word
+  }
+
+  .table_button {
+    float:left;
+    margin-left: 2px;
+  }
+  
