--- a/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco001/cumco001.component.css
+++ b/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco001/cumco001.component.css
@@ -1,5 +1,12 @@
-
 .ui-fieldset-legend {
-    font-weight: bold;
-  }
-  
+  font-weight: bold;
+}
+.ui-table {
+  overflow-wrap: break-word
+}
+
+.table_button {
+  float: left;
+  margin-left: 2px;
+}
+
