--- a/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco006/cumco006.component.html
+++ b/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco006/cumco006.component.html
@@ -48,7 +48,7 @@
     <div class="p-grid ui-fluid">
 
       <div class="p-col-12 p-md-4">
-        <p>{{ 'CUMCO006.FILTROS.filtroHoraInicio' | translate }}</p>
+        <p><B><FONT COLOR="red">*</FONT></B>{{ 'CUMCO006.FILTROS.filtroHoraInicio' | translate }}</p>
 
         <div class="ui-g">
           <div class="ui-g-12">
@@ -59,7 +59,7 @@
       </div>
 
       <div class="p-col-12 p-md-4">
-        <p>{{ 'CUMCO006.FILTROS.filtroHoraFin' | translate }}</p>
+        <p><FONT COLOR="red">*</FONT>{{ 'CUMCO006.FILTROS.filtroHoraFin' | translate }}</p>
 
         <div class="ui-g">
           <div class="ui-g-12">
@@ -94,9 +94,9 @@
         <div class="ui-helper-clearfix menu-sup-grid">
           <!-- Buttons -->
           <div class="button-sup-grid">
-            <p-button label="{{ 'BOTONESTABLA.agregar' | translate }}" icon="pi pi-plus" iconPos="left" style="float:left; margin-left: 2px;" (click)="onClicAgregar()"></p-button>
-            <p-button label="{{ 'BOTONESTABLA.eliminar' | translate }}" icon="pi pi-minus" iconPos="left" style="float:left; margin-left: 2px;" (click)="onClicEliminar()"></p-button>
-            <p-button label="{{ 'BOTONESTABLA.guardar' | translate }}" icon="pi pi-save" iconPos="left" style="float:left; margin-left: 2px;" (click)="onClicGuardar()"></p-button>
+            <p-button label="{{ 'BOTONESTABLA.agregar' | translate }}" icon="pi pi-plus" iconPos="left" class="table_button" (click)="onClicAgregar()"></p-button>
+            <p-button label="{{ 'BOTONESTABLA.eliminar' | translate }}" icon="pi pi-minus" iconPos="left" class="table_button" (click)="onClicEliminar()"></p-button>
+            <p-button label="{{ 'BOTONESTABLA.guardar' | translate }}" icon="pi pi-save" iconPos="left" class="table_button" (click)="onClicGuardar()"></p-button>
           </div>
         </div>
       </ng-template>
@@ -124,7 +124,7 @@
                       <p-calendar [(ngModel)]="row.fechaHabilitada" dateFormat="yy-mm-dd" [locale]="es"
                                   [disabled]="row.state === 'delete'"
                                   dataType="string"
-                                  (click) ="desSelectRow()"
+                                  (click)="desSelectRow()"
                                   (onSelect) ="edited(rowIndex)">
                       </p-calendar>
                     </div>
