--- a/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco008/cumco008.component.html
+++ b/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco008/cumco008.component.html
@@ -8,8 +8,9 @@
         <div class="ui-inputgroup">
           <span class="ui-inputgroup-addon"><i class="pi pi-search" style="line-height: 1;"></i></span>
           <p-autoComplete [dropdown]="true" placeholder="{{ 'CUMCO008.FILTROS.filtroCanalPlaceHolder' | translate }}"
-            field="codigoDescripcion" [suggestions]="suggestionsFilterCanal" [(ngModel)]="selectionFilterCanal" (focusout)="focusOutFiltroCanal()"
-            (completeMethod)="searchCanalFilter($event)" [dropdown]="true" (onSelect)="selectCanalFilter()">
+            field="codigoDescripcion" [suggestions]="suggestionsFilterCanal" [(ngModel)]="selectionFilterCanal"
+            (focusout)="focusOutFiltroCanal()" (completeMethod)="searchCanalFilter($event)" [dropdown]="true"
+            (onSelect)="selectCanalFilter()">
           </p-autoComplete>
           <p-button icon="pi pi-times" (click)="onClicBorrarSelectedCanalFilter()"></p-button>
         </div>
@@ -22,31 +23,34 @@
       <div class="ui-g-12">
         <div class="ui-inputgroup">
           <span class="ui-inputgroup-addon"><i class="pi pi-search" style="line-height: 1;"></i></span>
-          <p-autoComplete [dropdown]="true" placeholder="{{ 'CUMCO008.FILTROS.filtroCanalPlaceHolder' | translate }}" [disabled]="selectionTable1 === undefined"
-            field="codigoDescripcion" [suggestions]="suggestionsFilterMedioEnvio" [(ngModel)]="selectionFilterMedioEnvio" (focusout)="focusOutFiltroMedioEnvio()"
-            (completeMethod)="searchMedioFilterFil($event)" [dropdown]="true" (onSelect)="selectMedioEnvioFilter()">
+          <p-autoComplete [dropdown]="true" placeholder="{{ 'CUMCO008.FILTROS.filtroCanalPlaceHolder' | translate }}"
+            [disabled]="selectionTable1 === undefined" field="codigoDescripcion"
+            [suggestions]="suggestionsFilterMedioEnvio" [(ngModel)]="selectionFilterMedioEnvio"
+            (focusout)="focusOutFiltroMedioEnvio()" (completeMethod)="searchMedioFilterFil($event)" [dropdown]="true"
+            (onSelect)="selectMedioEnvioFilter()">
           </p-autoComplete>
           <p-button icon="pi pi-times" (click)="onClicBorrarSelectedMedioEnvioFilter()"></p-button>
         </div>
       </div>
     </div>
 
-    <br>
-
   </p-fieldset>
+
+  <br>
 
   <p-fieldset legend="{{ 'CUMCO008.configurarCanales' | translate }}">
 
     <p-messages [(value)]="msgs"></p-messages>
 
     <!-- Start Table 1 -->
-    <p-table [columns]="cols1" [value]="dataTable1" [paginator]="true" [(rows)]="nRowsTable1" [(first)]="pageTable1" [rowsPerPageOptions]="nRowsOptionsTable1"
-      selectionMode="single" [(selection)]="selectionTable1" (onRowSelect)="onRowTable1Select($event, selectionTable1)">
+    <p-table [columns]="cols1" [value]="dataTable1" [paginator]="true" [(rows)]="nRowsTable1" [(first)]="pageTable1"
+      [rowsPerPageOptions]="nRowsOptionsTable1" selectionMode="single" [(selection)]="selectionTable1"
+      (onRowSelect)="onRowTable1Select($event, selectionTable1)">
 
       <!-- Table Column Width -->
       <ng-template pTemplate="colgroup" let-columns>
         <colgroup>
-          <col style="width:5%"> 
+          <col style="width:5%">
         </colgroup>
       </ng-template>
 
@@ -56,11 +60,11 @@
           <!-- Buttons 1 -->
           <div class="button-sup-grid">
             <p-button label="{{ 'BOTONESTABLA.agregar' | translate }}" icon="pi pi-plus" iconPos="left"
-              style="float:left; margin-left: 2px;" (click)="onClickAgregar1()"></p-button>
+              class="table_button" (click)="onClickAgregar1()"></p-button>
             <p-button label="{{ 'BOTONESTABLA.eliminar' | translate }}" icon="pi pi-minus" iconPos="left"
-              style="float:left; margin-left: 2px;" (click)="onClickEliminar1()"></p-button>
+              class="table_button" (click)="onClickEliminar1()"></p-button>
             <p-button label="{{ 'BOTONESTABLA.guardar' | translate }}" icon="pi pi-save" iconPos="left"
-              style="float:left; margin-left: 2px;" (click)="onClickGuardar1()"></p-button>
+              class="table_button" (click)="onClickGuardar1()"></p-button>
           </div>
         </div>
       </ng-template>
@@ -69,7 +73,18 @@
       <ng-template pTemplate="header" let-columns>
         <tr>
           <th *ngFor="let col of columns" [pSortableColumn]="col.field">
-            {{col.header}}
+
+            <div *ngIf="col.required; else loggedOut">
+              <B>
+                <FONT COLOR="red">*</FONT>
+              </B>
+              {{col.header}}
+            </div>
+
+            <ng-template #loggedOut>
+              {{col.header}}
+            </ng-template>
+
             <p-sortIcon [field]="col.field" ariaLabel="Activate to sort"
               ariaLabelDesc="Activate to sort in descending order" ariaLabelAsc="Activate to sort in ascending order">
             </p-sortIcon>
@@ -136,7 +151,7 @@
               <div *ngSwitchCase="6" style="text-align: center">
                 <p-checkbox name="groupname" [(ngModel)]="row.telefonico" [binary]="true"
                   (ngModelChange)="row.telefonico = $event ? 1 : 0" (onChange)="checkboxTelefonicoChange(row)"
-                  [disabled]="row.state==='delete'"> 
+                  [disabled]="row.state==='delete'">
                 </p-checkbox>
               </div>
 
@@ -150,19 +165,20 @@
     <!-- End Table 1 -->
   </p-fieldset>
 
+  <br>
 
   <p-fieldset legend="{{ 'CUMCO008.vincularCanales' | translate }}">
 
     <p-messages [(value)]="msgs2"></p-messages>
-    
+
     <!-- Start Table 2 -->
-    <p-table [columns]="cols2" [value]="dataTable2" [paginator]="true" [(rows)]="nRowsTable2" [(first)]="pageTable2" [rowsPerPageOptions]="nRowsOptionsTable2"
-             selectionMode="single" [(selection)]="selectionTable2">
+    <p-table [columns]="cols2" [value]="dataTable2" [paginator]="true" [(rows)]="nRowsTable2" [(first)]="pageTable2"
+      [rowsPerPageOptions]="nRowsOptionsTable2" selectionMode="single" [(selection)]="selectionTable2">
 
       <!-- Table Column Width -->
       <ng-template pTemplate="colgroup" let-columns>
         <colgroup>
-          <col style="width:5%"> 
+          <col style="width:5%">
         </colgroup>
       </ng-template>
 
@@ -172,15 +188,15 @@
           <!-- Buttons 2 -->
           <div class="button-sup-grid">
             <p-button label="{{ 'BOTONESTABLA.agregar' | translate }}" icon="pi pi-plus" iconPos="left"
-              style="float:left; margin-left: 2px;" (click)="onClickAgregar2()"
+              class="table_button" (click)="onClickAgregar2()"
               [disabled]="selectionTable1 === undefined|| selectionTable1 === null || selectionTable1.state === 'new' ">
             </p-button>
             <p-button label="{{ 'BOTONESTABLA.eliminar' | translate }}" icon="pi pi-minus" iconPos="left"
-              style="float:left; margin-left: 2px;" (click)="onClickEliminar2()"
+              class="table_button" (click)="onClickEliminar2()"
               [disabled]="selectionTable1 === undefined|| selectionTable1 === null || selectionTable1.state === 'new' ">
             </p-button>
             <p-button label="{{ 'BOTONESTABLA.guardar' | translate }}" icon="pi pi-save" iconPos="left"
-              style="float:left; margin-left: 2px;" (click)="onClickGuardar2()"
+              class="table_button" (click)="onClickGuardar2()"
               [disabled]="selectionTable1 === undefined|| selectionTable1 === null || selectionTable1.state === 'new' ">
             </p-button>
           </div>
@@ -191,7 +207,17 @@
       <ng-template pTemplate="header" let-columns>
         <tr>
           <th *ngFor="let col of columns" [pSortableColumn]="col.field">
-            {{col.header}}
+            <div *ngIf="col.required; else loggedOut">
+              <B>
+                <FONT COLOR="red">*</FONT>
+              </B>
+              {{col.header}}
+            </div>
+
+            <ng-template #loggedOut>
+              {{col.header}}
+            </ng-template>
+            
             <p-sortIcon [field]="col.field" ariaLabel="Activate to sort"
               ariaLabelDesc="Activate to sort in descending order" ariaLabelAsc="Activate to sort in ascending order">
             </p-sortIcon>
@@ -226,7 +252,7 @@
               <div *ngSwitchCase="2">
                 <div *ngIf="row.medioEnvio.fuente !== undefined">
                   {{ row.medioEnvio.fuente.codigo + ' - ' + row.medioEnvio.fuente.descripcion}}
-                </div>    
+                </div>
               </div>
 
               <div *ngSwitchCase="3" style="text-align: center">
