--- a/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco010/cumco010.component.css
+++ b/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco010/cumco010.component.css
@@ -1,3 +1,10 @@
 .ui-fieldset-legend {
   font-weight: bold;
 }
+.ui-table {
+  overflow-wrap: break-word
+}
+.table_button {
+  float:left;
+  margin-left: 2px;
+}
