--- a/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco018/cumco018.component.html
+++ b/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco018/cumco018.component.html
@@ -40,9 +40,9 @@
             <div class="ui-helper-clearfix menu-sup-grid">
               <!-- Buttons 1 -->
               <div class="button-sup-grid">
-                <p-button label="{{ 'BOTONESTABLA.agregar' | translate }}" icon="pi pi-plus" iconPos="left" style="float:left; margin-left: 2px;" (click)="onClickAgregar1()"></p-button>
-                <p-button label="{{ 'BOTONESTABLA.eliminar' | translate }}" icon="pi pi-minus" iconPos="left" style="float:left; margin-left: 2px;" (click)="onClickEliminar1()"></p-button>
-                <p-button icon="pi pi-save" label="{{ 'BOTONESTABLA.guardar' | translate }}" iconPos="left" style="float:left; margin-left: 2px;" (click)="onClickGuardar1()"></p-button>
+                <p-button label="{{ 'BOTONESTABLA.agregar' | translate }}" icon="pi pi-plus" iconPos="left" class="table_button" (click)="onClickAgregar1()"></p-button>
+                <p-button label="{{ 'BOTONESTABLA.eliminar' | translate }}" icon="pi pi-minus" iconPos="left" class="table_button" (click)="onClickEliminar1()"></p-button>
+                <p-button icon="pi pi-save" label="{{ 'BOTONESTABLA.guardar' | translate }}" iconPos="left" class="table_button" (click)="onClickGuardar1()"></p-button>
               </div>
             </div>
           </ng-template>
@@ -52,7 +52,16 @@
           <ng-template pTemplate="header" let-columns>
             <tr>
               <th *ngFor="let col of columns" [pSortableColumn]="col.field">
-                {{col.header}}
+                <div *ngIf="col.required; else loggedOut">
+                  <B>
+                    <FONT COLOR="red">*</FONT>
+                  </B>
+                  {{col.header}}
+                </div>
+    
+                <ng-template #loggedOut>
+                  {{col.header}}
+                </ng-template>
                 <p-sortIcon [field]="col.field" ariaLabel="Activate to sort" ariaLabelDesc="Activate to sort in descending order" ariaLabelAsc="Activate to sort in ascending order"></p-sortIcon>
               </th>
             </tr>
@@ -121,7 +130,7 @@
             <div class="ui-inputgroup">
               <span class="ui-inputgroup-addon"><i class="pi pi-search" style="line-height: 1;"></i></span>
               <p-autoComplete [(ngModel)]="seleccionMensajeriaFilter" [suggestions]="suggestionsMensajeriaFilter" (onSelect)="selectFiltroMensajeria()" field="codigoNombre" (focusout)="focusOutFiltroMensajeria()"
-              (completeMethod)="searchMensajeriaFilter($event)" [dropdown]="true" [required]="true" placeholder="{{ 'CUMCO018.FILTROS.filtroMensajeroPlaceHolder' | translate }}"></p-autoComplete>
+              (completeMethod)="searchMensajeriaFilter($event)" [dropdown]="true"  placeholder="{{ 'CUMCO018.FILTROS.filtroMensajeroPlaceHolder' | translate }}"></p-autoComplete>
               <p-button icon="pi pi-times" (onClick)="onClickBorrarFiltroMensajeria()" ></p-button>
             </div>
           </div>
@@ -148,9 +157,9 @@
             <div class="ui-helper-clearfix menu-sup-grid">
               <!-- Buttons 2 -->
               <div class="button-sup-grid">
-                <p-button label="{{ 'BOTONESTABLA.agregar' | translate }}" icon="pi pi-plus" iconPos="left" style="float:left; margin-left: 2px;" (click)="onClickAgregar2()"></p-button>
-                <p-button label="{{ 'BOTONESTABLA.eliminar' | translate }}" icon="pi pi-minus" iconPos="left" style="float:left; margin-left: 2px;" (click)="onClickEliminar2()"></p-button>
-                <p-button icon="pi pi-save" label="{{ 'BOTONESTABLA.guardar' | translate }}" iconPos="left" style="float:left; margin-left: 2px;" (click)="onClickGuardar2()"></p-button>
+                <p-button label="{{ 'BOTONESTABLA.agregar' | translate }}" icon="pi pi-plus" iconPos="left" class="table_button" (click)="onClickAgregar2()"></p-button>
+                <p-button label="{{ 'BOTONESTABLA.eliminar' | translate }}" icon="pi pi-minus" iconPos="left" class="table_button" (click)="onClickEliminar2()"></p-button>
+                <p-button icon="pi pi-save" label="{{ 'BOTONESTABLA.guardar' | translate }}" iconPos="left" class="table_button" (click)="onClickGuardar2()"></p-button>
               </div>
             </div>
           </ng-template>
@@ -160,7 +169,16 @@
           <ng-template pTemplate="header" let-columns>
             <tr>
               <th *ngFor="let col of columns" [pSortableColumn]="col.field">
-                {{col.header}}
+                <div *ngIf="col.required; else loggedOut">
+                  <B>
+                    <FONT COLOR="red">*</FONT>
+                  </B>
+                  {{col.header}}
+                </div>
+    
+                <ng-template #loggedOut>
+                  {{col.header}}
+                </ng-template>
                 <p-sortIcon [field]="col.field" ariaLabel="Activate to sort" ariaLabelDesc="Activate to sort in descending order" ariaLabelAsc="Activate to sort in ascending order"></p-sortIcon>
               </th>
             </tr>
@@ -186,7 +204,7 @@
                           <p-cellEditor>
                             <ng-template pTemplate="input">
                               <p-autoComplete field="nombreCodigoGuion" (onSelect)="selectDependenciaTable2(rowIndex, $event)" (click)="onClickElminiarSelected2()" 
-                                [(ngModel)]="row.dependencia" (focusout)="focusOutTablaDependencia2(rowIndex)"
+                                [(ngModel)]="row.dependencia" (focusout)="focusOutTablaDependencia2(rowIndex)" [disabled]="row.state === 'delete'"
                                 [suggestions]="suggestionsDependenciaTabla2" (completeMethod)="searchDependencia2($event)" [dropdown]="true" >
                               </p-autoComplete>
                             </ng-template>
@@ -199,17 +217,17 @@
 
                         <div *ngSwitchCase="3">
                           <p-cellEditor>
-                              <ng-template pTemplate="input">
-                                  <input type="text" [(ngModel)]="row.descripcion" [maxlength]="300"
-                                      [style]="{'width':'100%', 'height':'100%'}"
-                                      [disabled]="row.state==='delete' "
-                                      (focusout)="editedTable2()" (keydown.enter)="editedTable2()">
-                              </ng-template>
-                              <ng-template pTemplate="output">
-                                  {{row.descripcion}}
-                              </ng-template>
+                            <ng-template pTemplate="input">
+                              <p-autoComplete field="codigoNombre" (onSelect)="editedTable2()" (click)="onClickElminiarSelected2()" 
+                                [(ngModel)]="row.funcionario" (focusout)="focusOutFuncionarioTable2(rowIndex)" [disabled]="row.state === 'delete' || row.dependencia.id == '' || row.dependencia.id == undefined "
+                                [suggestions]="suggestionsFuncionarioTabla2" (completeMethod)="searchFuncionario2($event, row)" [dropdown]="true" >
+                              </p-autoComplete>
+                            </ng-template>
+                            <ng-template pTemplate="output">
+                              {{row.funcionario.codigoNombre}} 
+                            </ng-template>
                           </p-cellEditor>
-                      </div>
+                        </div>
 
 
                       <div *ngSwitchCase="4" style="text-align: center">
@@ -245,8 +263,8 @@
           <div class="ui-g-12">
             <div class="ui-inputgroup">
               <span class="ui-inputgroup-addon"><i class="pi pi-search" style="line-height: 1;"></i></span>
-              <p-autoComplete [(ngModel)]="seleccionEmpresaFilter" [suggestions]="suggestionsEmpresaFilter"  (onSelect)="selectEmpresaFilter($event)"  (focusout)="focusOutFiltroEmpresa()" field="codigoNombre"
-              (completeMethod)="searchEmpresaFilter($event)" [dropdown]="true" [required]="true" placeholder="{{ 'CUMCO018.FILTROS.filtroEmpresaMensajeriaPlaceHolder' | translate }}"></p-autoComplete>
+              <p-autoComplete [(ngModel)]="seleccionEmpresaFilter" [suggestions]="suggestionsEmpresaFilter"  (onSelect)="selectEmpresaFilter()"  (focusout)="focusOutFiltroEmpresa()" field="codigoNombre"
+              (completeMethod)="searchEmpresaFilter($event)" [dropdown]="true"  placeholder="{{ 'CUMCO018.FILTROS.filtroEmpresaMensajeriaPlaceHolder' | translate }}"></p-autoComplete>
               <p-button icon="pi pi-times" (onClick)="onClickBorrarFiltroEmpresa()"></p-button>
             </div>
           </div>
@@ -272,9 +290,9 @@
             <div class="ui-helper-clearfix menu-sup-grid">
               <!-- Buttons 3 -->
               <div class="button-sup-grid">
-                <p-button label="{{ 'BOTONESTABLA.agregar' | translate }}" icon="pi pi-plus" iconPos="left" style="float:left; margin-left: 2px;" (click)="onClickAgregar3()"></p-button>
-                <p-button label="{{ 'BOTONESTABLA.eliminar' | translate }}" icon="pi pi-minus" iconPos="left" style="float:left; margin-left: 2px;" (click)="onClickEliminar3()"></p-button>
-                <p-button icon="pi pi-save" label="{{ 'BOTONESTABLA.guardar' | translate }}" iconPos="left" style="float:left; margin-left: 2px;" (click)="onClickGuardar3()"></p-button>
+                <p-button label="{{ 'BOTONESTABLA.agregar' | translate }}" icon="pi pi-plus" iconPos="left" class="table_button" (click)="onClickAgregar3()"></p-button>
+                <p-button label="{{ 'BOTONESTABLA.eliminar' | translate }}" icon="pi pi-minus" iconPos="left" class="table_button" (click)="onClickEliminar3()"></p-button>
+                <p-button icon="pi pi-save" label="{{ 'BOTONESTABLA.guardar' | translate }}" iconPos="left" class="table_button" (click)="onClickGuardar3()"></p-button>
               </div>
             </div>
           </ng-template>
@@ -284,7 +302,16 @@
           <ng-template pTemplate="header" let-columns>
             <tr>
               <th *ngFor="let col of columns" [pSortableColumn]="col.field">
-                {{col.header}}
+                <div *ngIf="col.required; else loggedOut">
+                  <B>
+                    <FONT COLOR="red">*</FONT>
+                  </B>
+                  {{col.header}}
+                </div>
+    
+                <ng-template #loggedOut>
+                  {{col.header}}
+                </ng-template>
                 <p-sortIcon [field]="col.field" ariaLabel="Activate to sort" ariaLabelDesc="Activate to sort in descending order" ariaLabelAsc="Activate to sort in ascending order"></p-sortIcon>
               </th>
             </tr>
