--- a/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco020/cumco020.component.css
+++ b/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco020/cumco020.component.css
@@ -1,3 +1,17 @@
 .ui-fieldset-legend {
-    font-weight: bold;
-  }
+  font-weight: bold;
+}
+.ui-table {
+  overflow-wrap: break-word
+}
+
+.table_button {
+  float:left;
+  margin-left: 2px;
+}
+
+.text_pp{
+  font-size: 300%;
+}
+
+
